fixes, changes, etc

--- a/day_5.ipynb
+++ b/day_5.ipynb
@@ -71,40 +71,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2587</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.570</td>\n",
-       "      <td>0.445</td>\n",
-       "      <td>0.150</td>\n",
-       "      <td>0.9950</td>\n",
-       "      <td>0.504</td>\n",
-       "      <td>0.1850</td>\n",
-       "      <td>0.2505</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2922</th>\n",
+       "      <th>3818</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.600</td>\n",
-       "      <td>0.465</td>\n",
-       "      <td>0.165</td>\n",
-       "      <td>1.0475</td>\n",
-       "      <td>0.465</td>\n",
-       "      <td>0.2345</td>\n",
-       "      <td>0.3150</td>\n",
-       "      <td>11</td>\n",
+       "      <td>0.565</td>\n",
+       "      <td>0.445</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.836</td>\n",
+       "      <td>0.406</td>\n",
+       "      <td>0.1605</td>\n",
+       "      <td>0.2245</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2657</th>\n",
+       "      <th>642</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.545</td>\n",
-       "      <td>0.400</td>\n",
-       "      <td>0.140</td>\n",
-       "      <td>0.7780</td>\n",
-       "      <td>0.368</td>\n",
-       "      <td>0.2150</td>\n",
-       "      <td>0.1800</td>\n",
-       "      <td>9</td>\n",
+       "      <td>0.590</td>\n",
+       "      <td>0.450</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.900</td>\n",
+       "      <td>0.358</td>\n",
+       "      <td>0.1560</td>\n",
+       "      <td>0.3150</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.435</td>\n",
+       "      <td>0.325</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.346</td>\n",
+       "      <td>0.159</td>\n",
+       "      <td>0.0840</td>\n",
+       "      <td>0.0950</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -112,14 +112,14 @@
       ],
       "text/plain": [
        "      sex  length  diameter  height  whole weight  shucked weight  \\\n",
-       "2587    0   0.570     0.445   0.150        0.9950           0.504   \n",
-       "2922    1   0.600     0.465   0.165        1.0475           0.465   \n",
-       "2657    0   0.545     0.400   0.140        0.7780           0.368   \n",
+       "3818    1   0.565     0.445    0.14         0.836           0.406   \n",
+       "642     0   0.590     0.450    0.16         0.900           0.358   \n",
+       "2010    2   0.435     0.325    0.12         0.346           0.159   \n",
        "\n",
        "      viscera weight  shell weight  rings  \n",
-       "2587          0.1850        0.2505      9  \n",
-       "2922          0.2345        0.3150     11  \n",
-       "2657          0.2150        0.1800      9  "
+       "3818          0.1605        0.2245      9  \n",
+       "642           0.1560        0.3150     19  \n",
+       "2010          0.0840        0.0950      7  "
       ]
      },
      "execution_count": 1,
@@ -142,6 +142,8 @@
     "data = pd.read_csv('data/abalone.csv')\n",
     "\n",
     "# немного препроцессинга\n",
+    "# будем отличать только взрослых от детей!\n",
+    "\n",
     "data['sex'] = data.sex.apply(lambda sex: {\n",
     "    'F': 0, 'M': 1, 'I': 2\n",
     "}[sex])\n",
@@ -248,9 +250,7 @@
    "source": [
     "На это диаграмме красным - то что добавило нам колец, а синим - то, что (для этой ракушки) убавило. Причем подписано сколько колец добавлено/убавлено. Лично я считаю, что для регрессии подобные объяснения очень наглядны. \n",
     "\n",
-    "Для классификации есть же нечто, скажем так, поинтереснее, а именно `Alibi Trust Scores` - уровни доверия. Это мера соответствия между предсказанным классом, и тем, какие ближайшие соседи у этого класса. Условно, если предсказанный класс примера находится рядом с множеством подобных - тем больше мы можем верить предсказанию. А если не условно, то это как у `silhoutte_score` - отношение между расстоянием до ближайшего класса, отличного от предсказанного, к расстоянию до предсказанного класса. Следовательно, если эта величина больше 1, и чем она вообще больше, тем больше доверия к предсказанию.\n",
-    "\n",
-    "Попробуем предсказывать конкретно детский пол по остальным признакам."
+    "Для классификации есть же нечто, скажем так, поинтереснее, а именно `Alibi Trust Scores` - уровни доверия. Это мера соответствия между предсказанным классом, и тем, какие ближайшие соседи у этого класса. Условно, если предсказанный класс примера находится рядом с множеством подобных - тем больше мы можем верить предсказанию. А если не условно, то это по аналогии с `silhoutte_score` - отношение между расстоянием до ближайшего класса, отличного от предсказанного, к расстоянию до предсказанного класса. Следовательно, если эта величина больше 1, и чем она вообще больше, тем больше доверия к предсказанию."
    ]
   },
   {
@@ -352,36 +352,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "simple: r2 0.548, acc 0.300\n"
+      "simple: r2 0.497, acc 0.540\n"
      ]
     }
    ],
    "source": [
-    "data = pd.read_csv('data/abalone.csv')\n",
-    "data = pd.get_dummies(data.sex).join(data.drop('sex', axis='columns'))\n",
+    "# data = pd.read_csv('data/abalone.csv')\n",
+    "# data = pd.get_dummies(data.sex).join(data.drop('sex', axis='columns'))\n",
     "\n",
     "indices = shuffle(list(range(len(data))), random_state=1)\n",
     "train = indices[:-1000]\n",
     "val = indices[-1000:-500]\n",
     "test = indices[-500:]\n",
     "\n",
-    "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
+    "from sklearn.linear_model import Ridge, LogisticRegression\n",
+    "from sklearn.preprocessing import PolynomialFeatures, PowerTransformer\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "\n",
-    "regressor = MLPRegressor(\n",
-    "    [120, 120], random_state=1\n",
-    ").fit(\n",
-    "    data.iloc[train,:-1], data.iloc[train, -1]\n",
+    "preprocessor_regression = make_pipeline(PowerTransformer(), PolynomialFeatures(degree=3))\n",
+    "X_regression_train = preprocessor_regression.fit_transform(data.iloc[train,1:-1])\n",
+    "X_regression_val = preprocessor_regression.transform(data.iloc[val,1:-1])\n",
+    "X_regression_test = preprocessor_regression.transform(data.iloc[test,1:-1])\n",
+    "\n",
+    "preprocessor_classification = make_pipeline(PowerTransformer(), PolynomialFeatures(degree=3))\n",
+    "X_classification_train = preprocessor_classification.fit_transform(data.iloc[train,1:])\n",
+    "X_classification_val = preprocessor_classification.transform(data.iloc[val,1:])\n",
+    "X_classification_test = preprocessor_classification.transform(data.iloc[test,1:])\n",
+    "\n",
+    "regressor = Ridge(random_state=1).fit(\n",
+    "    X_regression_train, data.iloc[train, -1]\n",
     ")\n",
     "\n",
-    "classifier = MLPClassifier(\n",
-    "    [120, 120], random_state=1\n",
-    ").fit(\n",
-    "    data.iloc[train,3:], data.iloc[train, :3]\n",
+    "classifier = LogisticRegression(random_state=1).fit(\n",
+    "    X_classification_train, data.iloc[train, 0]\n",
     ")\n",
     "\n",
     "print(\"simple: r2 %.3f, acc %.3f\" % (\n",
-    "    regressor.score(data.iloc[test,:-1], data.iloc[test, -1]),\n",
-    "    classifier.score(data.iloc[test,3:], data.iloc[test, :3])\n",
+    "    regressor.score(X_regression_test, data.iloc[test, -1]),\n",
+    "    classifier.score(X_classification_test, data.iloc[test, 0])\n",
     "))"
    ]
   },
@@ -391,24 +399,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
+    "from sklearn.ensemble import GradientBoostingRegressor, GradientBoostingClassifier\n",
     "\n",
-    "error_regressor = DecisionTreeRegressor(\n",
-    "    random_state=1\n",
-    ").fit(\n",
-    "    data.iloc[val,:-1],\n",
-    "    np.abs(\n",
-    "        regressor.predict(data.iloc[val,:-1]) - data.iloc[val,-1]\n",
+    "def get_error_models(regression_features, classifier_features):\n",
+    "    error_regressor = GradientBoostingRegressor(\n",
+    "        n_estimators=30, max_depth=3, random_state=1\n",
+    "    ).fit(\n",
+    "        X_regression_val[:, regression_features],\n",
+    "        np.abs(\n",
+    "            regressor.predict(X_regression_val[:, regression_features]) - data.iloc[val,-1]\n",
+    "        )\n",
     "    )\n",
-    ")\n",
     "\n",
-    "error_classifier = DecisionTreeClassifier(\n",
-    "    random_state=1\n",
-    ").fit(\n",
-    "    data.iloc[val,3:],\n",
-    "    np.abs(\n",
-    "        classifier.predict(data.iloc[val,3:]) - data.iloc[val,:3]\n",
-    "    ).astype(int)\n",
+    "    error_classifier = GradientBoostingClassifier(\n",
+    "        n_estimators=30, max_depth=3, random_state=1\n",
+    "    ).fit(\n",
+    "        X_classification_val[:, classifier_features],\n",
+    "        (\n",
+    "            classifier.predict(X_classification_val[:, classifier_features]) != data.iloc[val,0]\n",
+    "        ).astype(int)\n",
+    "    )\n",
+    "    return error_regressor, error_classifier\n",
+    "\n",
+    "error_regressor, error_classifier = get_error_models(\n",
+    "    regression_features=slice(None),\n",
+    "    classifier_features=slice(None)\n",
     ")"
    ]
   },
@@ -416,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Мы получили регрессор ошибки и классификатор ошибки. Их можно использовать и для отбора признаков (в обоих случаях уберем несколько признаков и посмотрим), и для проверки корректности предсказания."
+    "Мы получили регрессор ошибки и классификатор ошибки. Их можно использовать и для отбора признаков (в обоих случаях уберем несколько неважных признаков и посмотрим), и для проверки корректности предсказания."
    ]
   },
   {
@@ -428,37 +443,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "selected: r2 0.554, acc 0.362\n"
+      "selected: r2 0.512, acc 0.556\n"
      ]
     }
    ],
    "source": [
-    "redundand = 2\n",
-    "regressor_features = np.array(data.columns)[:-1][\n",
-    "    np.argsort(error_regressor.feature_importances_)\n",
-    "][::-1][:-redundand]\n",
+    "redundand = 40\n",
     "\n",
-    "classifier_features = np.array(data.columns)[3:][\n",
-    "    np.argsort(error_classifier.feature_importances_)\n",
-    "][::-1][:-redundand]\n",
+    "regressor_features = np.argsort(error_regressor.feature_importances_)[redundand:]\n",
+    "classifier_features = np.argsort(error_classifier.feature_importances_)[redundand:]\n",
     "\n",
-    "regressor = MLPRegressor(\n",
-    "    [120, 120], random_state=1\n",
-    ").fit(\n",
-    "    data.loc[train, regressor_features], \n",
+    "regressor = Ridge(random_state=1).fit(\n",
+    "    X_regression_train[:, regressor_features], \n",
     "    data.iloc[train, -1]\n",
     ")\n",
     "\n",
-    "classifier = MLPClassifier(\n",
-    "    [120, 120], random_state=1\n",
-    ").fit(\n",
-    "    data.loc[train, classifier_features],\n",
-    "    data.iloc[train, :3]\n",
+    "classifier = LogisticRegression(random_state=1).fit(\n",
+    "    X_classification_train[:, classifier_features],\n",
+    "    data.iloc[train, :1]\n",
     ")\n",
     "\n",
     "print(\"selected: r2 %.3f, acc %.3f\" % (\n",
-    "    regressor.score(data.loc[test, regressor_features], data.iloc[test, -1]),\n",
-    "    classifier.score(data.loc[test, classifier_features], data.iloc[test,:3])\n",
+    "    regressor.score(X_regression_test[:, regressor_features], data.iloc[test, -1]),\n",
+    "    classifier.score(X_classification_test[:, classifier_features], data.iloc[test,0])\n",
     "))"
    ]
   },
@@ -466,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В данном случае мы убрали по два признака, которые давали *наименьший вклад в объяснение ошибки*, это означает что они плохо объясняли различия между примерами. Давайте посмотрим на ошибку предсказания для конкретного примера."
+    "В данном случае мы убрали признаки, которые давали *наименьший вклад в объяснение ошибки*. Давайте посмотрим на ошибку предсказания для конкретного примера."
    ]
   },
   {
@@ -478,22 +485,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "regression: True 8, Predicted 10.47, error 1.107\n",
-      "classification: True [0, 1, 0], Predicted [0 0 0], is error [0 1 0]\n"
+      "regression: True 8, Predicted 9.58, error 1.220\n",
+      "classification: True 2, Predicted 1, is error 1\n"
      ]
     }
    ],
    "source": [
+    "error_regressor, error_classifier = get_error_models(\n",
+    "    regressor_features, classifier_features\n",
+    ")\n",
+    "\n",
     "print(\"regression: True %d, Predicted %.2f, error %.3f\" % (\n",
     "    data.iloc[test[0], -1],\n",
-    "    regressor.predict([data.loc[test[0], regressor_features]])[0],\n",
-    "    error_regressor.predict([data.iloc[test[0], :-1]])[0]\n",
+    "    regressor.predict([X_regression_test[0, regressor_features]])[0],\n",
+    "    error_regressor.predict([X_regression_test[0, regressor_features]])[0]\n",
     "))\n",
     "\n",
     "print(\"classification: True %s, Predicted %s, is error %s\" % (\n",
-    "    str(data.iloc[test[0], :3].values.astype(int).tolist()),\n",
-    "    str(classifier.predict([data.loc[test[0], classifier_features]])[0]),\n",
-    "    str(error_classifier.predict([data.iloc[test[0], 3:]])[0])\n",
+    "    str(data.iloc[test[0], 0].astype(int)),\n",
+    "    str(classifier.predict([X_classification_test[0, classifier_features]])[0]),\n",
+    "    str(error_classifier.predict([X_classification_test[0, classifier_features]])[0])\n",
     "))"
    ]
   },
@@ -501,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В принципе тот же стэкинг, только целевая величина несколько другая. Стоит заметить, если бы качество моделей было бы выше, лучше бы и работали модели ошибок."
+    "В принципе тот же стэкинг, только целевая величина несколько другая."
    ]
   }
  ],
