fixes, updates and reruns

--- a/day_4.ipynb
+++ b/day_4.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "Помимо упомянутого `Dense`-слоя, существуют следующие слои:\n",
     "1. Свёрточные (`Convolution`) - применяются обычно для обработки изображений. Они пробегают некоторым окном по всем входным признакам, и вычисляют *свертку* - некоторую функцию с весами сразу над несколькими признаками. Это мало того что позволяет сократить количество весов, но и конструировать новые (внутри сети) признаки.\n",
-    "2. Pooling (`Pooling`, субдискретизация, обычно не переводят) - применение операции усреднения или взятия максимума над входными в слой признаками. Используются для снижения размерности сети и извлечения полезных признаков.\n",
+    "2. Pooling (`Pooling`, субдискретизация, обычно не переводят) - применение операции усреднения или взятия максимума над входными в слой признаками, также пробегая по данным некоторым окном. Используются для снижения размерности сети и извлечения полезных признаков.\n",
     "3. Рекуррентные (`Recurrent`) - применяются для работы с последовательностями (тексты, временные ряды). Таким слоям на вход подаются последовательности, а они подстраивают свои веса с учетом структуры (если она есть конечно) последовательности.\n",
     "4. Dropout (`Dropout`, выбрасывание, обычно не переводят) - это особый слой, который... выбрасывает случайно заданный процент нейронов между слоями. Это позволяет *регуляризовывать* сеть (избегать переобучения), а так же делает все нейроны сети более \"осведомленными\", скажем так.\n",
     "5. Слои вложений (`Embeddings`) - полезны для работы с категориальными данными. Это так же и тексты (со словами из словаря). Такие слои представляют собой таблицу весов, которые переводят входные категории в вектора заданной размерности.\n",
@@ -1734,7 +1734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Нас будут интересовать `token_embeddings` и `sentence_mean_embeddings`, а точнее косинусное расстояние между ними."
+    "Нас будут интересовать `token_embeddings` и `sentence_mean_embeddings`, а точнее косинусное сходство между ними."
    ]
   },
   {
@@ -1820,7 +1820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Косинусное расстояние это мера угла от -1 (противоположные вектора) до +1 (сонаправленные). Почему косинусное расстояние? Чтобы не влияло количество слов (то есть \"смысл\" в пространстве вложений задается направлением).\n",
+    "Косинусное сходство это мера угла между векторами: от -1 (противоположные вектора) до +1 (сонаправленные). Почему используется косинусное cходство? Чтобы не влияло количество частей слова или самих слов (то есть \"смысл слова\" в пространстве вложений задается направлением, а не его частями).\n",
     "\n",
     "Кстати, если вектора преобразовать (разделить на их евклидову длину) - то косинусное расстояние будет выражаться через евклидово расстояние векторов."
    ]
@@ -1857,7 +1857,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Что из этого важно, так это то что близкие по смыслу предложения имеют более близкое к 1 расстояние. На этом можно строить кластеризацию, классификаторы даже без *fine-tuning* `BERT`. Кроме `BERT` существует еще одна модель от Google: `USE` (*Universal Sentence Encoder*), которая построена на тех же принципах, но уже работает с предложениями.\n",
+    "Что из этого важно. Важно то, что близкие по смыслу предложения имеют более близкое к 1 расстояние. На этом можно строить кластеризацию, классификаторы даже без *fine-tuning* `BERT`. Кроме `BERT` существует еще одна модель от Google: `USE` (*Universal Sentence Encoder*), которая построена на тех же принципах, но уже работает с предложениями.\n",
     "\n",
     "> Если необходимо работать со смыслом предложений, рекомендую пакет `sentence-transformers`, в нём есть дистиллированная многоязычная модель `USE`.\n",
     "> Дистиллированная - это значит обучена более легкая модель, которая предсказывает то же, что и оригинальная (обычно качество у них чуть хуже, но зато скорость выше и размер ниже).\n",
@@ -2026,7 +2026,7 @@
     "1. На вход подаются предыдущее `h(t - 1)` и текущий вектор признаков `x(t)`,\n",
     "2. Они каждый умножаются на свои матрицы весов и сдвигаются на вектор смещения, после чего активируются,\n",
     "3. Из них с помощью покомпонентного перемножения и (другой уже) активации формируется промежуточный вектор `h_hat(t)` (\"h с крышкой\"),\n",
-    "4. Затем из линейной комбинации `h(t - 1)` и `h_hat(t)` формируется уже новый `h(t)`.\n",
+    "4. Затем из линейной комбинации `h(t - 1)` и `h_hat(t)` формируется уже новый `h(t)` и так же - выходной вектор.\n",
     "\n",
     "Непонятно? :) Да, картинка непонятна (это граф операций), формула на словах тоже.\n",
     "\n",
