--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -1618,7 +1618,7 @@
     "    \n",
     "value = 0\n",
     "while value < 42:\n",
-    "    value += 1 # не забудьте, а но цикл будет бесконечным\n",
+    "    value += 1 # не забудьте, а то цикл будет бесконечным без выхода\n",
     "print(value)"
    ]
   },
